tests/tooling/fixtures/native/recovery/positive/instancetype_annotation_alias_signature.objc3
module InstancetypeAnnotationAliasSignature;

fn choose(flag: bool, when_true: instancetype?, when_false: instancetype<Protocol>) -> instancetype! {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 41, 9) + 1;
}
