tests/tooling/fixtures/native/recovery/negative/negative_instancetype_return_nullability_suffix.objc3
// Negative fixture: legacy-name regression proving non-id/Class/instancetype return nullability suffix rejection.
// Expected diagnostic code(s): O3S206.
module NegativeInstancetypeReturnNullabilitySuffix;

fn pick(flag: bool) -> bool? {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  if (pick(true) != 0) {
    return 1;
  }
  return 0;
}
